--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "cra-template": "1.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-facebook-login": "^4.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "socket.io-client": "^2.3.0"
@@ -31,5 +32,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://localhost:500"
+  "proxy": "http://localhost:500"
 }
