--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.7",
     "path": "^0.12.7",
+    "query-string": "^6.12.1",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
