--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.1.10",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "socket.io-client": "^2.3.0"
