--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.7",
+    "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-facebook-token": "^3.3.0",
     "passport-google-plus-token": "^2.1.0",
